fix approved marker overlap

--- a/styles.css
+++ b/styles.css
@@ -3057,7 +3057,7 @@ header .container {
 }
 
 .walkthrough-marker--approved {
-  top: 44%;
+  top: 22%;
   left: 67%;
 }
 
